Multilingual employment/dedication + filter UI
Bump poi-ooxml to 5.4.0 and add multilingual, more robust logic for employment and dedication extraction. PersonaController: change display name format (Lastname, Firstname); add multilingual fallbacks for employmentType across locales and prefer dept role when appropriate; add buildDedicationExpr helper to extract dedication from various keyword structures; add 'filtrePersonal' param and support for 'vigent' vs selected-period matching; simplify some chart/bookmark handling. UI: adjust demo layout, add 'Filtre personal' select. demo.js: improve normalizeDedication (percent parsing and clearer defaults), use apiUrl helper if present, include filtrePersonal in requests, adapt response field mapping, and wire the new filter change event. Overall: more resilient data extraction across locales and a UI filter for current vs period-based staff.